# MessagesLog

./: .gitattributes  .gitignore  LICENCE.md  README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dependabot-automerge.yml  lint.yml
docs/: CONTRIBUTING.md
